--- a/news/src/main/resources/templates/pages/signup.html
+++ b/news/src/main/resources/templates/pages/signup.html
@@ -165,7 +165,8 @@
   </label><br/>
   <div class="button-row">
     <button type="submit">가입하기</button>
-    <button type="button" onclick="location.href='/pages/login'">로그인화면으로 돌아가기</button>
+    <button type="button" onclick="history.back()">로그인화면으로 이동</button>
+    <button type="button" onclick="location.href='/pages/'">대시보드로 이동</button>
   </div>
 </form>
 
